feat(forge20): update to new command API format